@@ -1,0 +1,192 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "J. H. Weaver, D. W. Lynch, C. G. Olson. Optical properties of niobium from 0.1 to 36.4 eV, <a href=\"https://doi.org/10.1103/PhysRevB.7.4311\"><i>Phys. Rev. B</i> <b>7</b>, 4311-4318 (1973)</a><br>(data points extracted from a figure)"
+DATA:
+  - type: tabulated nk
+    data: |
+        2.583E-02 8.933E-01 2.300E-01
+        2.584E-02 8.931E-01 2.302E-01
+        2.651E-02 8.663E-01 2.693E-01
+        2.712E-02 8.458E-01 2.984E-01
+        2.752E-02 8.376E-01 3.176E-01
+        2.786E-02 8.374E-01 3.344E-01
+        2.859E-02 8.567E-01 3.696E-01
+        2.872E-02 8.605E-01 3.755E-01
+        2.919E-02 8.733E-01 3.980E-01
+        2.971E-02 8.887E-01 4.263E-01
+        3.031E-02 9.052E-01 4.514E-01
+        3.037E-02 9.076E-01 4.548E-01
+        3.106E-02 9.496E-01 5.012E-01
+        3.112E-02 9.526E-01 5.041E-01
+        3.165E-02 9.788E-01 5.241E-01
+        3.200E-02 1.005E+00 5.352E-01
+        3.251E-02 1.048E+00 5.441E-01
+        3.331E-02 1.103E+00 5.345E-01
+        3.391E-02 1.137E+00 5.251E-01
+        3.405E-02 1.144E+00 5.220E-01
+        3.510E-02 1.183E+00 4.914E-01
+        3.594E-02 1.200E+00 4.541E-01
+        3.607E-02 1.202E+00 4.475E-01
+        3.672E-02 1.209E+00 4.184E-01
+        3.732E-02 1.213E+00 3.999E-01
+        3.743E-02 1.213E+00 3.947E-01
+        3.824E-02 1.207E+00 3.496E-01
+        3.876E-02 1.204E+00 3.340E-01
+        3.916E-02 1.198E+00 3.270E-01
+        4.001E-02 1.182E+00 3.148E-01
+        4.014E-02 1.181E+00 3.136E-01
+        4.064E-02 1.186E+00 3.109E-01
+        4.084E-02 1.186E+00 3.067E-01
+        4.151E-02 1.176E+00 2.665E-01
+        4.212E-02 1.168E+00 2.437E-01
+        4.232E-02 1.165E+00 2.382E-01
+        4.295E-02 1.143E+00 2.347E-01
+        4.301E-02 1.141E+00 2.349E-01
+        4.562E-02 1.068E+00 2.502E-01
+        4.572E-02 1.065E+00 2.510E-01
+        4.875E-02 1.003E+00 2.773E-01
+        4.945E-02 9.871E-01 2.826E-01
+        5.113E-02 9.405E-01 2.972E-01
+        5.281E-02 8.902E-01 3.260E-01
+        5.308E-02 8.819E-01 3.303E-01
+        5.430E-02 8.443E-01 3.462E-01
+        5.509E-02 8.262E-01 3.710E-01
+        5.733E-02 7.869E-01 4.619E-01
+        5.746E-02 7.849E-01 4.673E-01
+        6.021E-02 7.476E-01 5.828E-01
+        6.141E-02 7.396E-01 6.233E-01
+        6.392E-02 7.568E-01 6.819E-01
+        6.430E-02 7.593E-01 6.923E-01
+        6.741E-02 7.581E-01 8.105E-01
+        6.760E-02 7.586E-01 8.174E-01
+        6.960E-02 7.695E-01 8.848E-01
+        7.159E-02 7.929E-01 9.501E-01
+        7.175E-02 7.948E-01 9.552E-01
+        7.369E-02 8.304E-01 1.019E+00
+        7.408E-02 8.418E-01 1.032E+00
+        7.620E-02 9.078E-01 1.089E+00
+        7.748E-02 9.436E-01 1.119E+00
+        7.837E-02 9.704E-01 1.132E+00
+        8.044E-02 1.033E+00 1.146E+00
+        8.201E-02 1.081E+00 1.154E+00
+        8.258E-02 1.098E+00 1.155E+00
+        8.511E-02 1.161E+00 1.155E+00
+        8.522E-02 1.163E+00 1.155E+00
+        8.736E-02 1.202E+00 1.149E+00
+        8.966E-02 1.236E+00 1.137E+00
+        9.106E-02 1.247E+00 1.120E+00
+        9.176E-02 1.251E+00 1.110E+00
+        9.303E-02 1.257E+00 1.094E+00
+        9.437E-02 1.257E+00 1.084E+00
+        9.525E-02 1.257E+00 1.080E+00
+        9.687E-02 1.256E+00 1.078E+00
+        9.690E-02 1.256E+00 1.078E+00
+        9.837E-02 1.251E+00 1.084E+00
+        9.905E-02 1.248E+00 1.088E+00
+        1.001E-01 1.249E+00 1.097E+00
+        1.006E-01 1.251E+00 1.102E+00
+        1.028E-01 1.265E+00 1.123E+00
+        1.035E-01 1.271E+00 1.128E+00
+        1.055E-01 1.284E+00 1.137E+00
+        1.065E-01 1.291E+00 1.138E+00
+        1.071E-01 1.297E+00 1.135E+00
+        1.099E-01 1.323E+00 1.121E+00
+        1.111E-01 1.333E+00 1.114E+00
+        1.130E-01 1.338E+00 1.099E+00
+        1.149E-01 1.325E+00 1.078E+00
+        1.166E-01 1.306E+00 1.058E+00
+        1.185E-01 1.286E+00 1.043E+00
+        1.207E-01 1.258E+00 1.033E+00
+        1.234E-01 1.211E+00 1.040E+00
+        1.235E-01 1.210E+00 1.041E+00
+        1.263E-01 1.153E+00 1.076E+00
+        1.294E-01 1.107E+00 1.126E+00
+        1.298E-01 1.103E+00 1.132E+00
+        1.352E-01 1.047E+00 1.238E+00
+        1.368E-01 1.037E+00 1.272E+00
+        1.397E-01 1.026E+00 1.342E+00
+        1.442E-01 1.018E+00 1.452E+00
+        1.455E-01 1.018E+00 1.483E+00
+        1.509E-01 1.021E+00 1.603E+00
+        1.524E-01 1.024E+00 1.637E+00
+        1.543E-01 1.030E+00 1.678E+00
+        1.562E-01 1.037E+00 1.719E+00
+        1.578E-01 1.051E+00 1.749E+00
+        1.590E-01 1.096E+00 1.792E+00
+        1.597E-01 1.108E+00 1.809E+00
+        1.614E-01 1.133E+00 1.833E+00
+        1.638E-01 1.168E+00 1.857E+00
+        1.669E-01 1.212E+00 1.887E+00
+        1.684E-01 1.225E+00 1.896E+00
+        1.716E-01 1.245E+00 1.914E+00
+        1.725E-01 1.248E+00 1.920E+00
+        1.756E-01 1.252E+00 1.949E+00
+        1.767E-01 1.255E+00 1.961E+00
+        1.789E-01 1.267E+00 1.991E+00
+        1.796E-01 1.267E+00 2.001E+00
+        1.849E-01 1.262E+00 2.076E+00
+        1.871E-01 1.268E+00 2.112E+00
+        1.899E-01 1.289E+00 2.164E+00
+        1.946E-01 1.331E+00 2.248E+00
+        1.957E-01 1.342E+00 2.268E+00
+        1.967E-01 1.355E+00 2.288E+00
+        2.002E-01 1.443E+00 2.382E+00
+        2.011E-01 1.465E+00 2.405E+00
+        2.068E-01 1.588E+00 2.535E+00
+        2.085E-01 1.620E+00 2.575E+00
+        2.112E-01 1.676E+00 2.615E+00
+        2.136E-01 1.720E+00 2.646E+00
+        2.172E-01 1.787E+00 2.683E+00
+        2.183E-01 1.807E+00 2.691E+00
+        2.195E-01 1.829E+00 2.697E+00
+        2.212E-01 1.861E+00 2.704E+00
+        2.231E-01 1.903E+00 2.695E+00
+        2.259E-01 1.959E+00 2.686E+00
+        2.324E-01 2.077E+00 2.656E+00
+        2.393E-01 2.175E+00 2.625E+00
+        2.452E-01 2.253E+00 2.580E+00
+        2.452E-01 2.253E+00 2.580E+00
+        2.486E-01 2.293E+00 2.548E+00
+        2.502E-01 2.313E+00 2.529E+00
+        2.612E-01 2.347E+00 2.512E+00
+        2.661E-01 2.376E+00 2.521E+00
+        2.746E-01 2.453E+00 2.565E+00
+        2.821E-01 2.525E+00 2.591E+00
+        2.878E-01 2.592E+00 2.568E+00
+        2.931E-01 2.641E+00 2.532E+00
+        2.936E-01 2.644E+00 2.528E+00
+        3.003E-01 2.686E+00 2.465E+00
+        3.072E-01 2.706E+00 2.401E+00
+        3.102E-01 2.708E+00 2.377E+00
+        3.172E-01 2.684E+00 2.347E+00
+        3.252E-01 2.656E+00 2.324E+00
+        3.388E-01 2.615E+00 2.315E+00
+        3.392E-01 2.613E+00 2.315E+00
+        3.539E-01 2.563E+00 2.368E+00
+        3.643E-01 2.544E+00 2.413E+00
+        3.845E-01 2.528E+00 2.517E+00
+        4.050E-01 2.528E+00 2.634E+00
+        4.176E-01 2.541E+00 2.703E+00
+        4.252E-01 2.559E+00 2.736E+00
+        4.292E-01 2.569E+00 2.751E+00
+        4.415E-01 2.608E+00 2.795E+00
+        4.661E-01 2.692E+00 2.861E+00
+        4.882E-01 2.768E+00 2.891E+00
+        5.178E-01 2.856E+00 2.894E+00
+        5.386E-01 2.905E+00 2.879E+00
+        5.532E-01 2.925E+00 2.869E+00
+        5.700E-01 2.933E+00 2.861E+00
+        5.762E-01 2.932E+00 2.860E+00
+        6.391E-01 2.879E+00 2.843E+00
+        6.760E-01 2.811E+00 2.856E+00
+        7.029E-01 2.700E+00 2.930E+00
+        7.779E-01 2.478E+00 3.081E+00
+        7.988E-01 2.338E+00 3.237E+00
+        8.420E-01 2.207E+00 3.379E+00
+        8.621E-01 2.093E+00 3.545E+00
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
+    
