@@ -1,0 +1,396 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "J. H. Weaver, C. G. Olson, D. W. Lynch. Optical properties of crystalline tungsten, <a href=\"https://doi.org/10.1103/PhysRevB.12.1293\"><i>Phys. Rev. B</i> <b>12</b>, 1293-1297 (1975)</a><br>(data points extracted from a figure)"
+DATA:
+  - type: tabulated nk
+    data: |
+        4.429E-02 6.598E-01 3.148E-01
+        4.454E-02 6.566E-01 3.163E-01
+        4.475E-02 6.519E-01 3.201E-01
+        4.503E-02 6.457E-01 3.295E-01
+        4.509E-02 6.446E-01 3.319E-01
+        4.535E-02 6.401E-01 3.434E-01
+        4.551E-02 6.380E-01 3.496E-01
+        4.577E-02 6.358E-01 3.601E-01
+        4.595E-02 6.341E-01 3.682E-01
+        4.616E-02 6.290E-01 3.753E-01
+        4.646E-02 6.166E-01 3.827E-01
+        4.681E-02 5.993E-01 3.923E-01
+        4.689E-02 5.961E-01 3.942E-01
+        4.737E-02 5.804E-01 4.053E-01
+        4.796E-02 5.597E-01 4.214E-01
+        4.806E-02 5.564E-01 4.241E-01
+        4.900E-02 5.226E-01 4.523E-01
+        4.916E-02 5.169E-01 4.582E-01
+        4.973E-02 5.009E-01 4.850E-01
+        4.988E-02 4.973E-01 4.919E-01
+        5.033E-02 4.872E-01 5.153E-01
+        5.071E-02 4.851E-01 5.397E-01
+        5.084E-02 4.833E-01 5.468E-01
+        5.152E-02 4.685E-01 5.766E-01
+        5.153E-02 4.684E-01 5.770E-01
+        5.196E-02 4.743E-01 6.021E-01
+        5.249E-02 4.781E-01 6.269E-01
+        5.260E-02 4.792E-01 6.324E-01
+        5.318E-02 4.853E-01 6.596E-01
+        5.356E-02 4.867E-01 6.753E-01
+        5.375E-02 4.859E-01 6.817E-01
+        5.440E-02 4.834E-01 7.042E-01
+        5.443E-02 4.836E-01 7.056E-01
+        5.499E-02 4.910E-01 7.305E-01
+        5.539E-02 4.923E-01 7.467E-01
+        5.574E-02 4.926E-01 7.611E-01
+        5.633E-02 4.945E-01 7.879E-01
+        5.637E-02 4.942E-01 7.894E-01
+        5.702E-02 4.857E-01 8.116E-01
+        5.745E-02 4.866E-01 8.298E-01
+        5.775E-02 4.901E-01 8.437E-01
+        5.873E-02 5.027E-01 8.877E-01
+        5.891E-02 5.048E-01 8.956E-01
+        5.975E-02 5.143E-01 9.312E-01
+        6.012E-02 5.188E-01 9.461E-01
+        6.110E-02 5.377E-01 9.864E-01
+        6.111E-02 5.379E-01 9.867E-01
+        6.214E-02 5.668E-01 1.029E+00
+        6.253E-02 5.767E-01 1.045E+00
+        6.346E-02 5.979E-01 1.082E+00
+        6.379E-02 6.067E-01 1.094E+00
+        6.417E-02 6.191E-01 1.107E+00
+        6.492E-02 6.458E-01 1.132E+00
+        6.515E-02 6.535E-01 1.139E+00
+        6.583E-02 6.767E-01 1.156E+00
+        6.649E-02 6.999E-01 1.170E+00
+        6.662E-02 7.047E-01 1.173E+00
+        6.724E-02 7.299E-01 1.183E+00
+        6.791E-02 7.568E-01 1.193E+00
+        6.803E-02 7.613E-01 1.194E+00
+        6.883E-02 7.891E-01 1.200E+00
+        6.970E-02 8.183E-01 1.204E+00
+        6.983E-02 8.227E-01 1.205E+00
+        7.070E-02 8.538E-01 1.209E+00
+        7.089E-02 8.598E-01 1.209E+00
+        7.228E-02 9.000E-01 1.203E+00
+        7.239E-02 9.029E-01 1.203E+00
+        7.344E-02 9.308E-01 1.196E+00
+        7.359E-02 9.347E-01 1.195E+00
+        7.421E-02 9.480E-01 1.192E+00
+        7.494E-02 9.608E-01 1.185E+00
+        7.495E-02 9.611E-01 1.185E+00
+        7.572E-02 9.722E-01 1.173E+00
+        7.587E-02 9.738E-01 1.171E+00
+        7.650E-02 9.783E-01 1.161E+00
+        7.683E-02 9.804E-01 1.156E+00
+        7.755E-02 9.838E-01 1.145E+00
+        7.755E-02 9.838E-01 1.145E+00
+        7.821E-02 9.825E-01 1.137E+00
+        7.892E-02 9.762E-01 1.132E+00
+        7.916E-02 9.734E-01 1.131E+00
+        7.962E-02 9.675E-01 1.129E+00
+        8.026E-02 9.577E-01 1.127E+00
+        8.050E-02 9.535E-01 1.126E+00
+        8.099E-02 9.443E-01 1.125E+00
+        8.145E-02 9.358E-01 1.125E+00
+        8.186E-02 9.294E-01 1.128E+00
+        8.239E-02 9.221E-01 1.135E+00
+        8.295E-02 9.145E-01 1.145E+00
+        8.357E-02 9.061E-01 1.157E+00
+        8.409E-02 9.007E-01 1.169E+00
+        8.484E-02 8.971E-01 1.190E+00
+        8.520E-02 8.961E-01 1.200E+00
+        8.640E-02 8.945E-01 1.235E+00
+        8.653E-02 8.948E-01 1.238E+00
+        8.809E-02 9.038E-01 1.279E+00
+        8.812E-02 9.041E-01 1.280E+00
+        8.973E-02 9.191E-01 1.319E+00
+        9.012E-02 9.238E-01 1.328E+00
+        9.131E-02 9.391E-01 1.354E+00
+        9.259E-02 9.568E-01 1.379E+00
+        9.322E-02 9.668E-01 1.389E+00
+        9.375E-02 9.759E-01 1.397E+00
+        9.489E-02 9.958E-01 1.413E+00
+        9.533E-02 1.003E+00 1.419E+00
+        9.588E-02 1.013E+00 1.425E+00
+        9.722E-02 1.037E+00 1.438E+00
+        9.832E-02 1.057E+00 1.445E+00
+        9.861E-02 1.063E+00 1.447E+00
+        9.987E-02 1.089E+00 1.455E+00
+        1.000E-01 1.091E+00 1.455E+00
+        1.014E-01 1.119E+00 1.461E+00
+        1.030E-01 1.151E+00 1.466E+00
+        1.032E-01 1.156E+00 1.466E+00
+        1.050E-01 1.192E+00 1.467E+00
+        1.053E-01 1.198E+00 1.468E+00
+        1.067E-01 1.223E+00 1.468E+00
+        1.068E-01 1.225E+00 1.468E+00
+        1.082E-01 1.245E+00 1.463E+00
+        1.085E-01 1.249E+00 1.461E+00
+        1.093E-01 1.257E+00 1.454E+00
+        1.104E-01 1.267E+00 1.443E+00
+        1.106E-01 1.269E+00 1.441E+00
+        1.121E-01 1.277E+00 1.425E+00
+        1.127E-01 1.279E+00 1.418E+00
+        1.141E-01 1.284E+00 1.400E+00
+        1.148E-01 1.285E+00 1.391E+00
+        1.160E-01 1.283E+00 1.376E+00
+        1.162E-01 1.283E+00 1.374E+00
+        1.173E-01 1.278E+00 1.361E+00
+        1.178E-01 1.274E+00 1.356E+00
+        1.184E-01 1.268E+00 1.351E+00
+        1.195E-01 1.253E+00 1.345E+00
+        1.198E-01 1.248E+00 1.344E+00
+        1.206E-01 1.233E+00 1.343E+00
+        1.215E-01 1.214E+00 1.345E+00
+        1.217E-01 1.209E+00 1.346E+00
+        1.231E-01 1.175E+00 1.350E+00
+        1.232E-01 1.173E+00 1.351E+00
+        1.248E-01 1.132E+00 1.365E+00
+        1.251E-01 1.124E+00 1.370E+00
+        1.260E-01 1.104E+00 1.383E+00
+        1.271E-01 1.081E+00 1.405E+00
+        1.272E-01 1.078E+00 1.407E+00
+        1.286E-01 1.056E+00 1.434E+00
+        1.294E-01 1.048E+00 1.450E+00
+        1.298E-01 1.044E+00 1.458E+00
+        1.309E-01 1.036E+00 1.483E+00
+        1.322E-01 1.030E+00 1.510E+00
+        1.325E-01 1.029E+00 1.517E+00
+        1.336E-01 1.023E+00 1.540E+00
+        1.343E-01 1.020E+00 1.555E+00
+        1.355E-01 1.016E+00 1.578E+00
+        1.359E-01 1.015E+00 1.584E+00
+        1.370E-01 1.015E+00 1.597E+00
+        1.383E-01 1.014E+00 1.613E+00
+        1.389E-01 1.012E+00 1.621E+00
+        1.403E-01 1.008E+00 1.638E+00
+        1.409E-01 1.006E+00 1.646E+00
+        1.423E-01 9.972E-01 1.668E+00
+        1.428E-01 9.938E-01 1.677E+00
+        1.444E-01 9.812E-01 1.706E+00
+        1.449E-01 9.758E-01 1.717E+00
+        1.464E-01 9.602E-01 1.748E+00
+        1.472E-01 9.511E-01 1.769E+00
+        1.486E-01 9.403E-01 1.801E+00
+        1.491E-01 9.368E-01 1.815E+00
+        1.497E-01 9.336E-01 1.829E+00
+        1.498E-01 9.331E-01 1.831E+00
+        1.513E-01 9.255E-01 1.865E+00
+        1.516E-01 9.564E-01 1.809E+00
+        1.520E-01 9.529E-01 1.823E+00
+        1.525E-01 9.499E-01 1.836E+00
+        1.526E-01 9.495E-01 1.838E+00
+        1.547E-01 9.401E-01 1.899E+00
+        1.555E-01 9.366E-01 1.922E+00
+        1.557E-01 9.358E-01 1.928E+00
+        1.578E-01 9.257E-01 2.000E+00
+        1.579E-01 9.253E-01 2.003E+00
+        1.598E-01 9.192E-01 2.068E+00
+        1.613E-01 9.193E-01 2.116E+00
+        1.619E-01 9.209E-01 2.133E+00
+        1.642E-01 9.324E-01 2.198E+00
+        1.643E-01 9.331E-01 2.202E+00
+        1.652E-01 9.378E-01 2.229E+00
+        1.666E-01 9.455E-01 2.268E+00
+        1.685E-01 9.643E-01 2.328E+00
+        1.687E-01 9.655E-01 2.333E+00
+        1.695E-01 9.699E-01 2.356E+00
+        1.711E-01 9.764E-01 2.402E+00
+        1.738E-01 1.018E+00 2.483E+00
+        1.740E-01 1.020E+00 2.487E+00
+        1.775E-01 1.065E+00 2.575E+00
+        1.796E-01 1.087E+00 2.630E+00
+        1.826E-01 1.118E+00 2.715E+00
+        1.867E-01 1.196E+00 2.845E+00
+        1.870E-01 1.201E+00 2.852E+00
+        1.912E-01 1.284E+00 2.968E+00
+        1.921E-01 1.306E+00 2.995E+00
+        1.946E-01 1.368E+00 3.074E+00
+        1.963E-01 1.400E+00 3.127E+00
+        1.985E-01 1.440E+00 3.191E+00
+        2.005E-01 1.491E+00 3.254E+00
+        2.022E-01 1.543E+00 3.306E+00
+        2.044E-01 1.618E+00 3.375E+00
+        2.053E-01 1.648E+00 3.404E+00
+        2.067E-01 1.691E+00 3.443E+00
+        2.087E-01 1.759E+00 3.486E+00
+        2.093E-01 1.781E+00 3.497E+00
+        2.115E-01 1.878E+00 3.545E+00
+        2.125E-01 1.920E+00 3.564E+00
+        2.145E-01 2.005E+00 3.595E+00
+        2.150E-01 2.031E+00 3.603E+00
+        2.173E-01 2.149E+00 3.635E+00
+        2.178E-01 2.178E+00 3.643E+00
+        2.190E-01 2.255E+00 3.666E+00
+        2.200E-01 2.335E+00 3.690E+00
+        2.208E-01 2.393E+00 3.702E+00
+        2.223E-01 2.483E+00 3.698E+00
+        2.227E-01 2.507E+00 3.692E+00
+        2.249E-01 2.625E+00 3.647E+00
+        2.254E-01 2.652E+00 3.636E+00
+        2.273E-01 2.773E+00 3.592E+00
+        2.281E-01 2.822E+00 3.579E+00
+        2.300E-01 2.925E+00 3.544E+00
+        2.304E-01 2.945E+00 3.533E+00
+        2.330E-01 3.063E+00 3.454E+00
+        2.331E-01 3.067E+00 3.451E+00
+        2.361E-01 3.164E+00 3.363E+00
+        2.370E-01 3.191E+00 3.335E+00
+        2.387E-01 3.254E+00 3.264E+00
+        2.392E-01 3.272E+00 3.240E+00
+        2.415E-01 3.322E+00 3.148E+00
+        2.427E-01 3.336E+00 3.099E+00
+        2.446E-01 3.346E+00 3.025E+00
+        2.456E-01 3.348E+00 2.985E+00
+        2.475E-01 3.352E+00 2.910E+00
+        2.491E-01 3.349E+00 2.850E+00
+        2.508E-01 3.340E+00 2.790E+00
+        2.537E-01 3.322E+00 2.704E+00
+        2.541E-01 3.320E+00 2.692E+00
+        2.584E-01 3.304E+00 2.589E+00
+        2.595E-01 3.300E+00 2.564E+00
+        2.633E-01 3.280E+00 2.486E+00
+        2.647E-01 3.267E+00 2.460E+00
+        2.686E-01 3.234E+00 2.409E+00
+        2.718E-01 3.210E+00 2.380E+00
+        2.779E-01 3.164E+00 2.342E+00
+        2.780E-01 3.163E+00 2.342E+00
+        2.859E-01 3.090E+00 2.316E+00
+        2.866E-01 3.084E+00 2.315E+00
+        2.911E-01 3.046E+00 2.313E+00
+        2.943E-01 3.026E+00 2.321E+00
+        2.979E-01 3.009E+00 2.335E+00
+        3.025E-01 2.992E+00 2.361E+00
+        3.048E-01 2.980E+00 2.381E+00
+        3.080E-01 2.966E+00 2.410E+00
+        3.114E-01 2.962E+00 2.434E+00
+        3.175E-01 2.967E+00 2.471E+00
+        3.183E-01 2.969E+00 2.476E+00
+        3.257E-01 3.003E+00 2.529E+00
+        3.307E-01 3.030E+00 2.565E+00
+        3.362E-01 3.059E+00 2.606E+00
+        3.399E-01 3.085E+00 2.629E+00
+        3.442E-01 3.124E+00 2.650E+00
+        3.497E-01 3.180E+00 2.673E+00
+        3.509E-01 3.193E+00 2.678E+00
+        3.575E-01 3.270E+00 2.705E+00
+        3.576E-01 3.270E+00 2.705E+00
+        3.610E-01 3.323E+00 2.714E+00
+        3.662E-01 3.373E+00 2.677E+00
+        3.688E-01 3.401E+00 2.652E+00
+        3.720E-01 3.431E+00 2.621E+00
+        3.766E-01 3.454E+00 2.579E+00
+        3.790E-01 3.459E+00 2.556E+00
+        3.866E-01 3.458E+00 2.490E+00
+        3.912E-01 3.445E+00 2.460E+00
+        3.930E-01 3.438E+00 2.449E+00
+        4.002E-01 3.406E+00 2.415E+00
+        4.115E-01 3.379E+00 2.416E+00
+        4.118E-01 3.378E+00 2.416E+00
+        4.253E-01 3.346E+00 2.439E+00
+        4.298E-01 3.336E+00 2.450E+00
+        4.426E-01 3.317E+00 2.489E+00
+        4.487E-01 3.314E+00 2.511E+00
+        4.650E-01 3.325E+00 2.574E+00
+        4.694E-01 3.332E+00 2.591E+00
+        4.921E-01 3.380E+00 2.664E+00
+        4.937E-01 3.384E+00 2.668E+00
+        5.111E-01 3.433E+00 2.700E+00
+        5.298E-01 3.490E+00 2.716E+00
+        5.327E-01 3.497E+00 2.719E+00
+        5.489E-01 3.522E+00 2.739E+00
+        5.705E-01 3.524E+00 2.787E+00
+        5.739E-01 3.526E+00 2.794E+00
+        5.997E-01 3.557E+00 2.860E+00
+        6.024E-01 3.562E+00 2.866E+00
+        6.260E-01 3.607E+00 2.906E+00
+        6.268E-01 3.609E+00 2.907E+00
+        6.460E-01 3.657E+00 2.925E+00
+        6.524E-01 3.680E+00 2.937E+00
+        6.572E-01 3.697E+00 2.943E+00
+        6.712E-01 3.746E+00 2.937E+00
+        6.808E-01 3.797E+00 2.914E+00
+        6.849E-01 3.818E+00 2.904E+00
+        7.008E-01 3.871E+00 2.879E+00
+        7.061E-01 3.884E+00 2.869E+00
+        7.173E-01 3.896E+00 2.850E+00
+        7.314E-01 3.891E+00 2.828E+00
+        7.528E-01 3.862E+00 2.788E+00
+        7.549E-01 3.857E+00 2.784E+00
+        7.778E-01 3.789E+00 2.737E+00
+        7.817E-01 3.772E+00 2.731E+00
+        7.938E-01 3.705E+00 2.733E+00
+        7.958E-01 3.694E+00 2.735E+00
+        8.147E-01 3.596E+00 2.757E+00
+        8.327E-01 3.492E+00 2.801E+00
+        8.480E-01 3.405E+00 2.853E+00
+        8.731E-01 3.279E+00 2.954E+00
+        8.945E-01 3.192E+00 3.040E+00
+        9.235E-01 3.113E+00 3.135E+00
+        9.379E-01 3.084E+00 3.180E+00
+        9.801E-01 3.007E+00 3.323E+00
+        1.005E+00 2.966E+00 3.423E+00
+        1.020E+00 2.949E+00 3.496E+00
+        1.056E+00 2.944E+00 3.703E+00
+        1.074E+00 2.946E+00 3.807E+00
+        1.086E+00 2.952E+00 3.871E+00
+        1.107E+00 2.991E+00 3.994E+00
+        1.109E+00 3.005E+00 4.016E+00
+        1.119E+00 3.040E+00 4.105E+00
+        1.154E+00 3.047E+00 4.217E+00
+        1.167E+00 3.057E+00 4.244E+00
+        1.210E+00 3.116E+00 4.327E+00
+        1.255E+00 3.147E+00 4.379E+00
+        1.275E+00 3.153E+00 4.397E+00
+        1.285E+00 3.155E+00 4.404E+00
+        1.315E+00 3.155E+00 4.423E+00
+        1.379E+00 3.133E+00 4.451E+00
+        1.393E+00 3.127E+00 4.456E+00
+        1.422E+00 3.111E+00 4.464E+00
+        1.441E+00 3.107E+00 4.474E+00
+        1.445E+00 3.098E+00 4.472E+00
+        1.465E+00 3.057E+00 4.464E+00
+        1.493E+00 2.977E+00 4.486E+00
+        1.504E+00 2.920E+00 4.533E+00
+        1.506E+00 2.887E+00 4.578E+00
+        1.509E+00 2.878E+00 4.584E+00
+        1.512E+00 2.864E+00 4.593E+00
+        1.551E+00 2.702E+00 4.714E+00
+        1.575E+00 2.598E+00 4.799E+00
+        1.616E+00 2.429E+00 4.956E+00
+        1.646E+00 2.309E+00 5.080E+00
+        1.724E+00 2.042E+00 5.412E+00
+        1.759E+00 1.930E+00 5.596E+00
+        1.830E+00 1.736E+00 6.010E+00
+        1.870E+00 1.656E+00 6.226E+00
+        1.889E+00 1.628E+00 6.310E+00
+        2.011E+00 1.495E+00 6.910E+00
+        2.091E+00 1.341E+00 7.911E+00
+        2.131E+00 1.327E+00 8.151E+00
+        2.169E+00 1.328E+00 8.317E+00
+        2.259E+00 1.353E+00 8.663E+00
+        2.311E+00 1.363E+00 8.930E+00
+        2.344E+00 1.366E+00 9.145E+00
+        2.423E+00 1.366E+00 9.758E+00
+        2.433E+00 1.358E+00 9.903E+00
+        2.449E+00 1.340E+00 1.017E+01
+        2.475E+00 1.305E+00 1.069E+01
+        2.522E+00 1.231E+00 1.184E+01
+        2.531E+00 1.207E+00 1.219E+01
+        2.542E+00 1.213E+00 1.227E+01
+        2.582E+00 1.261E+00 1.234E+01
+        2.666E+00 1.489E+00 1.248E+01
+        2.791E+00 1.742E+00 1.265E+01
+        2.803E+00 1.750E+00 1.267E+01
+        2.889E+00 1.792E+00 1.277E+01
+        2.926E+00 1.807E+00 1.281E+01
+        3.197E+00 1.875E+00 1.322E+01
+        3.475E+00 1.845E+00 1.416E+01
+        3.562E+00 1.646E+00 1.609E+01
+        3.669E+00 1.496E+00 1.799E+01
+        3.757E+00 1.428E+00 1.909E+01
+        4.110E+00 1.273E+00 2.245E+01
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
+    
